--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
     margin: 20px;
+    text-align: center;
   }
   
   ol, ul {
@@ -11,6 +12,7 @@ body {
     clear: both;
     content: "";
     display: table;
+    
   }
   
   .status {
@@ -24,12 +26,12 @@ body {
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 50px;
     margin-right: -1px;
     margin-top: -1px;
-    padding: 0;
+    padding: 0px;
     text-align: center;
-    width: 34px;
+    width: 50px;
   }
   
   .square:focus {
@@ -49,3 +51,9 @@ body {
     margin-left: 20px;
   }
   
+.btn{
+    padding: 5px;
+    margin: 3px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
